@startuml architecture_L1_v2
!theme plain
skinparam roundcorner 10
skinparam classAttributeIconSize 0
skinparam packageStyle folder

title 航天器动力学与控制：L1 级架构实现细节 (最优轨道维持 LQR v2.0)

' ==========================================
' 核心领域层 (Core Domain)
' ==========================================
package "core" #E3F2FD {
    
    package "types" {
        enum CoordinateFrame <<enumeration>> {
            J2000_ECI
            J2000_SSB
            SUN_EARTH_ROTATING
            EARTH_MOON_ROTATING
            BODY_FRAME
        }
        
        class Telecommand <<contract>> {
            + type : str
            + target_state : ndarray
            + frame : CoordinateFrame
        }
    }
    
    package "spacecraft" {
        class SpacecraftPointMass {
            + id : str
            + state : ndarray
            + frame : CoordinateFrame
            + initial_mass : float
            + current_mass : float
            + external_accel : ndarray
            + consumed_fuel : float
            + position() : ndarray
            + velocity() : ndarray
            + apply_thrust(force_vector: ndarray, force_frame: CoordinateFrame)
            + clear_thrust()
            + consume_mass(m_dot: float, dt: float)
            + get_derivative(gravity_accel: ndarray, gravity_frame: CoordinateFrame) : ndarray
        }
    }
    
    package "environment" {
        class CelestialEnvironment {
            + region : str
            + epoch : float
            + computation_frame : CoordinateFrame
            + mu : float
            + pos_sun : ndarray
            + pos_earth : ndarray
            + step_time(dt: float)
            + get_gravity_acceleration(sc_state: ndarray, sc_frame: CoordinateFrame) : Tuple[ndarray, CoordinateFrame]
            - _compute_crtbp_acceleration(state: ndarray) : ndarray
        }
    }
    
    package "ground_station" {
        class GroundStation {
            + name : str
            + operating_frame : CoordinateFrame
            + pos_noise_std : float
            + vel_noise_std : float
            + track_spacecraft(true_state: ndarray, sc_frame: CoordinateFrame) : Tuple[ndarray, CoordinateFrame]
            + generate_telecommand(cmd_type: str, target_state: ndarray, target_frame: CoordinateFrame) : Telecommand
        }
    }
    
    package "gnc_subsystem" {
        class GNC_Subsystem {
            + sc_id : str
            + operating_frame : CoordinateFrame
            + estimated_state : ndarray
            + target_state : ndarray
            + is_active : bool
            + control_mode : str
            + process_telecommand(packet: Telecommand)
            + update_navigation(obs_state: ndarray, obs_frame: CoordinateFrame)
            + compute_control_force(k_matrix: ndarray) : Tuple[ndarray, CoordinateFrame]
        }
    }
}

' ==========================================
' 基础设施层 (Utilities Domain)
' ==========================================
package "utils" #E8F5E9 {
    
    package "math_tools" {
        class "math_tools.py" as MathTools <<module>> {
            + get_lqr_gain(A: ndarray, B: ndarray, Q: ndarray, R: ndarray) : ndarray
        }
        note bottom: 封装 SciPy 连续时间 ARE 求解器\n提供基于真实物理量纲的 LQR 增益
    }

    package "loggers" {
        class HDF5Logger {
            + filepath : str
            + flush_interval : int
            - _buffer : dict
            + set_metadata(path: str, meta_dict: dict)
            + log(group: str, dataset: str, data: ndarray)
            + step()
            + flush()
            + close()
        }
    }
    
    package "visualizer" {
        class L1Visualizer {
            + filepath : str
            + sc_id : str
            - true_state : ndarray
            - target_state : ndarray
            - thrust : ndarray
            + plot_state_history(save_path: str)
            + plot_gnc_activity(save_path: str)
            + create_animation(save_path: str, downsample: int, thrust_scale: float)
        }
    }
}

' ==========================================
' 主控脚本 (Scenario Engine)
' ==========================================
class "main.py (L1 仿真主循环)" as MainLoop <<Script>> #FFF3E0

' ==========================================
' 依赖关系与数据流映射
' ==========================================

' 1. 全局契约强依赖
SpacecraftPointMass .up.> CoordinateFrame : 强制校验
CelestialEnvironment .up.> CoordinateFrame : 强制校验
GroundStation .up.> CoordinateFrame : 强制校验
GNC_Subsystem .up.> CoordinateFrame : 强制校验
GroundStation .up.> Telecommand : 生成
GNC_Subsystem .up.> Telecommand : 消费

' 2. 仿真主循环驱动的物理/信息交互 (通过 main.py 桥接)
MainLoop --> CelestialEnvironment : 1. 请求环境场
MainLoop --> SpacecraftPointMass : 2. 动力学积分
MainLoop --> GroundStation : 3. 触发测量与上行指令
MainLoop --> MathTools : 4. 组装物理 A/B 阵求解最优 K
MainLoop --> GNC_Subsystem : 5. 注入 K 阵触发控制解算

CelestialEnvironment -[hidden]-> SpacecraftPointMass
note on link
  [物理域流转]
  环境输出带 CoordinateFrame 的加速度，
  注入给 Spacecraft 进行 RK4/Euler 积分。
end note

GroundStation -[hidden]-> GNC_Subsystem
note on link
  [信息域流转]
  Spacecraft 真实状态被 GroundStation 观测加噪，
  打包成 Telecommand 喂给 GNC 算法。
end note

GNC_Subsystem -[hidden]-> SpacecraftPointMass
note on link
  [控制执行]
  GNC 计算出的带 CoordinateFrame 的推力，
  施加给 Spacecraft 的执行机构。
end note

' 3. 数据落盘与后处理解耦
MainLoop --> HDF5Logger : 将高维张量增量写入 .h5
HDF5Logger <.. L1Visualizer : 仿真结束后离线读取并渲染图表/动画

@enduml
